<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_action_restaurant"
            android:title="@string/nearby_restaurant" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_action_order_history"
            android:title="@string/order_history" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_action_update_info"
            android:title="@string/my_profile" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_action_favorite"
            android:title="@string/nav_favorite" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_action_sign_up"
            android:title="@string/sign_out" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>

    </item>

</menu>