<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/divider"
    tools:context=".UpdateInfoActivity">

    <!-- app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent">
       <androidx.appcompat.widget.Toolbar
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize"
           app:titleTextColor="@android:color/white"
           app:popupTheme="@style/AppTheme.PopupOverlay"
           android:background="@color/button_color" >
       </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/padding_layout"
            android:text="@string/userInformation"
            android:textColor="@color/button_color"/>
        <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/padding_card">
             <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_layout"
            android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edt_user_name"
                        android:hint="@string/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edt_user_address"
                        android:hint="@string/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_update"
        android:text="@string/btn_update"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_alignSelf="flex_start"
        android:background="@drawable/border_button"
        android:layout_margin="@dimen/margin_btn" />
    </LinearLayout>
</LinearLayout>