<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/divider"
    tools:context=".PlaceOrderActivity">
    <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    app:titleTextColor="@android:color/white"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:src="@drawable/ic_attach_money_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="0dp"
                            android:text="180.0"
                            android:id="@+id/txt_total_cash"
                            android:layout_weight="8"
                            android:layout_marginLeft="3dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <View
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:background="@android:color/darker_gray"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_local_phone_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="0dp"
                            android:id="@+id/txt_user_phone"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="8"
                            android:text="+21693593324"
                            android:textSize="16sp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <View
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:background="@android:color/darker_gray"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_date_range_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="0dp"
                            android:id="@+id/txt_date_order"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="2"
                            android:text="Date"
                            android:textSize="16sp"
                            android:layout_height="wrap_content" />
                        <EditText
                            android:id="@+id/edt_date"
                            android:layout_width="0dp"
                            android:inputType="none"
                            android:layout_weight="7"
                            android:onClick="DatePicker"
                            android:editable="false"
                            android:hint="@string/Select_Date"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:padding="8dp"
                android:text="@string/edt_address"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:id="@+id/txt_user_address"
                            android:layout_weight="9"
                            android:text="Kairouen 3100"
                            android:layout_marginLeft="8dp"
                            android:layout_gravity="center_vertical"
                            android:textSize="16sp"
                            android:layout_height="wrap_content" />
                        <CheckBox
                            android:id="@+id/ckb_default_address"
                            android:layout_width="0dp"
                            android:checked="true"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <View
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:background="@android:color/darker_gray"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="10"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_new_address"
                            android:layout_marginLeft="8dp"
                            android:textSize="16sp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="7"/>
                        <Button
                            android:id="@+id/btn_add_new_address"
                            android:layout_weight="3"
                            android:text="@string/btn_new_address"
                            android:background="@drawable/border_button"
                            android:layout_width="0dp"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <View
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:background="@android:color/darker_gray"
                        android:layout_height="1dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:padding="8dp"
                android:text="@string/edt_payment"
                android:textSize="19sp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_height="wrap_content">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:checked="true"
                            android:id="@+id/rdi_cod"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Cash_On_Deliver"/>
                        <RadioButton
                            android:id="@+id/rdi_online_payment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Online_Payment"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btn_proceed"
                android:layout_gravity="bottom"
                android:textColor="@android:color/white"
                android:text="@string/btn_Proceed"
                android:layout_margin="8dp"
                android:background="@drawable/border_button"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>