<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context=".HomeActivity">
    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/img_food_detail"
        android:scaleType="centerCrop"
        android:layout_height="150dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="10"
                        android:id="@+id/linearlayout1"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:src="@drawable/ic_attach_money_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="0dp"
                            android:text="180.0"
                            android:id="@+id/txt_money_food"
                            android:layout_weight="8"
                            android:layout_marginLeft="3dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <View
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:background="@android:color/darker_gray"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/size"
                            android:textColor="@color/button_color"
                            android:layout_height="wrap_content" />
                        <RadioGroup
                            android:layout_marginLeft="3dp"
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:id="@+id/radio_group_size"
                            android:weightSum="3"
                            android:layout_height="wrap_content">
                        </RadioGroup>
                    </LinearLayout>
                    <View
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:background="@android:color/darker_gray"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/description"
                            android:textColor="@color/button_color"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="match_parent"
                            android:id="@+id/txt_description_food"
                            android:textSize="@dimen/txt_details"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <View
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:background="@android:color/darker_gray"
                        android:layout_height="1dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="right"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/discount"
                            android:textColor="@android:color/black"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/txt_discount_food"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/txt_details"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:src="@drawable/percent"
                            android:layout_marginLeft="3dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
